Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4732

Still seeing VC errors on master

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 6.2.0
    • 6.2.1, 7.0.0
    • Network
    • None

    Description

      Seeing this in the error logs a lot:

      [Jun 13 17:14:26.606] Server {0x2b1a9f010700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x634000c186a0, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:26.606] Server {0x2b1a9f010700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x634000c186a0, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:26.631] Server {0x2b1a9e3eb700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x634000c0f220, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:26.631] Server {0x2b1a9e3eb700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x634000c0f220, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:26.727] Server {0x2b1aa0433700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x634000c13240, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:26.727] Server {0x2b1aa0433700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x634000c13240, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:26.765] Server {0x2b1aa083a700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x6340002364e0, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:26.765] Server {0x2b1aa083a700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x6340002364e0, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:26.914] Server {0x2b1a9e7f2700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x63400088c2e0, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:26.914] Server {0x2b1a9e7f2700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x63400088c2e0, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:26.938] Server {0x2b1a9e3eb700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x6340004f7fe0, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:26.938] Server {0x2b1a9e3eb700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x6340004f7fe0, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:27.004] Server {0x2b1aa3487700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x63400025a860, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:27.004] Server {0x2b1aa3487700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x63400025a860, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:27.048] Server {0x2b1aa144f700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x634000ad2820, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:27.048] Server {0x2b1aa144f700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x634000ad2820, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:27.248] Server {0x2b1a9dbdd700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x6340003fa1a0, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:27.248] Server {0x2b1a9dbdd700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x6340003fa1a0, cont (nil), nbytes 0, reader (nil)
      [Jun 13 17:14:27.388] Server {0x2b1aa3080700} ERROR: <UnixNetVConnection.cc:629 (do_io_read)> do_io_read invoked on closed vc 0x634000807f60, cont (nil), nbytes 0, buf (nil)
      [Jun 13 17:14:27.388] Server {0x2b1aa3080700} ERROR: <UnixNetVConnection.cc:653 (do_io_write)> do_io_write invoked on closed vc 0x634000807f60, cont (nil), nbytes 0, reader (nil)
      

      Attachments

        Issue Links

          Activity

            People

              bcall Bryan Call
              bcall Bryan Call
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 10m
                  2h 10m