TS-4732: Changing the do_io_read API so it can be called with NULL and 0 byte values.  Allowing do_io_read and do_io_write to not warn on closed connection when we are only trying to disable the reads and writes for it. Removed some macros that were used in a few places (not all the time) and a couple that were not used at all.