proxy/http2/Http2ClientSession.h
@@ -187,8 +187,7 @@ public:
   virtual void
   release_netvc()
   {
-    // Make sure the vio's are also released to avoid
-    // later surprises in inactivity timeout
+    // Make sure the vio's are also released to avoid later surprises in inactivity timeout
     if (client_vc) {
       client_vc->do_io_read(NULL, 0, NULL);
       client_vc->do_io_write(NULL, 0, NULL);
